# forth-ai-underwriting

./: .env.docker.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  DEPLOYMENT.md  Makefile  QUICK_START.md  README.md  WEBHOOK_SETUP.md  docker-compose.yml  document_download_service_new.py  env_template.txt  feature_flags.json  migrate_to_microservices.py  pyproject.toml  run_local.py  test_aws_integration.py  test_webhook_integration.py  webhook_service.py
configs/: .env.example  docker-production.env.example
docker/: Dockerfile  Dockerfile.download  Dockerfile.webhook
instructions/: DATA-1084.doc
scripts/: deploy-download.sh  deploy-webhook.sh  dev_setup.py  init_db.py  test_gemini_health.py  validate_config.py
services/: README.md  docker-compose.yml
services/document-service/: Dockerfile
services/document-service/config/: settings.py
services/document-service/src/: main.py
services/validation-service/: Dockerfile  requirements.txt
services/validation-service/config/: settings.py
services/validation-service/src/: main.py
services/webhook-service/: Dockerfile  requirements.txt
services/webhook-service/config/: settings.py
services/webhook-service/src/: main.py  webhook_processor.py
shared-libs/models/: common.py
shared-libs/utils/: logging.py
src/forth_ai_underwriting/: __init__.py  lambda_handlers.py
src/forth_ai_underwriting/api/: main.py
src/forth_ai_underwriting/cli/: main.py
src/forth_ai_underwriting/config/: settings.py
src/forth_ai_underwriting/core/: database.py  error_handling.py  exceptions.py  feature_flags.py  middleware.py  models.py  observability.py  repositories.py  schemas.py  service_registry.py
src/forth_ai_underwriting/data/: enhanced_reference_tables.json  reference_tables.json
src/forth_ai_underwriting/infrastructure/: __init__.py  ai_parser.py  external_apis.py  queue.py
src/forth_ai_underwriting/models/: __init__.py  base_models.py  client_models.py  contract_models.py  hardship_models.py  validation_models.py
src/forth_ai_underwriting/prompts/: __init__.py  contract_prompts.py  hardship_prompts.py  prompt_manager.py  validation_prompts.py
src/forth_ai_underwriting/services/: document_download_service.py  gemini_llm.py  gemini_service.py  llm_service.py  process.py  queue_service.py  s3_service.py  teams_bot.py  validation.py
src/forth_ai_underwriting/utils/: __init__.py  environment.py  retry.py  secret_manager.py
src/forth_ai_underwriting/webhooks/: __init__.py  api.py  config.py  models.py  services.py
src/forth_ai_underwriting/workers/: download_worker.py  parse_worker.py  validation_worker.py
tests/: test_ai_parser.py  test_gemini_provider_health.py  test_integration.py  test_validation.py  test_webhooks.py
